@@ -10,6 +10,10 @@
 
   <refentryinfo>
     <date>2015-06-15</date>
+    <copyright>
+      <year>2015</year>
+      <holder>Joël Krähemann</holder>
+    </copyright>
   </refentryinfo>
   
   <refmeta>
