@@ -1,3 +1,9 @@
+ags (1.1.0)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* TODO:JK: implement AgsPositionNotationCursor and AgsPositionAutomationCursor
+	* TODO:JK: fix and implement auto-scroll
+
 ags (1.0.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
